--- a/_posts/这是我个人博客的第一篇文章.md
+++ b/_posts/这是我个人博客的第一篇文章.md
@@ -1,5 +1,18 @@
+---
+layout:     post
+title:      这是我个人博客的第一篇文章
+subtitle:   
+date:       2019-4-4
+author:     clyz-mm
+header-img: img/post-bg-ios9-web.jpg
+catalog: 	 true
+tags:
+    - 
+    - 
+---
 -随便写点什么
 ！删除github上的文件夹：
+
 0. git clone git url
 1. git pull git url
 2. git checkout 
