--- a/_posts/2019-04-04-这是我个人博客的第一篇文章.md
+++ b/_posts/2019-04-04-这是我个人博客的第一篇文章.md
@@ -1,14 +1,14 @@
 ---
 layout:     post
 title:      这是我个人博客的第一篇文章
-subtitle:   
+subtitle:   test
 date:       2019-4-4
 author:     clyz-mm
 header-img: img/post-bg-ios9-web.jpg
 catalog: 	 true
 tags:
-    - 
-    - 
+    - test
+    - ...
 ---
 -随便写点什么
 ！删除github上的文件夹：
