--- a/_posts/2019-04-04-第一篇文章.md
+++ b/_posts/2019-04-04-第一篇文章.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      这是我个人博客的第一篇文章
+title:      第一篇文章
 subtitle:   
 date:       2019-4-4
 author:     clyz
@@ -9,8 +9,8 @@ catalog: 	 true
 tags:
     - github
 ---
--随便写点什么纪念一下。。。
--删除github上的文件夹：
+- 随便写点什么纪念一下。。。
+- 删除github上的文件夹：
 
 0. git clone git url
 1. git pull git url
