Update and rename 2019-04-04-第一篇文章.md to 2019-04-04-github删除文件夹.md

--- a/_posts/2019-04-04-github删除文件夹.md
+++ b/_posts/2019-04-04-github删除文件夹.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      第一篇文章
+title:      github删除文件夹
 subtitle:   
 date:       2019-4-4
 author:     clyz-mm
@@ -10,9 +10,6 @@ tags:
     - github
 ---
 
-
-- 随便写点什么纪念一下。。。
-- 删除github上的文件夹：
 
 0. git clone git url
 1. git pull git url
